--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,20 +4,28 @@
     "es6": true,
     "node": true
   },
-  "extends": ["prettier", "airbnb-base"],
-  "plugins": ["prettier"],
+  "extends": [
+    "airbnb-base",
+    "prettier",
+    "plugin:node/recommended"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
   "parserOptions": {
     "ecmaVersion": 2018
   },
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
-    // "comma-dangle": ["error", "never"],
-    "prettier/prettier": [
-      "error",
-      {
-        "singleQuote": true,
-        "parser": "flow",
-        "trailingComma": "es6"
-      }
-    ]
+    "prettier/prettier": "error",
+    "no-unused-vars": "warn",
+    "no-console": "off",
+    "func-names": "off",
+    "no-plusplus": "off",
+    "no-process-exit": "off",
+    "class-methods-use-this": "off"
   }
 }
