--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rehatapi",
+  "name": "pos-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node ./server.js",
     "dev": "nodemon ./server.js",
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^5.19.4",
-    "axios": "^0.27.2",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "blob-stream": "^0.1.3",
     "brfs": "^2.0.2",
@@ -22,7 +22,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-flash": "0.0.2",
-    "jsonwebtoken": "^8.5.1",
+    "http-status": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
@@ -30,15 +31,20 @@
     "pdfkit": "^0.13.0",
     "rand-token": "^1.0.1",
     "sequelize": "^6.19.0",
-    "uuid": "^8.3.2"
+    "sequelize-auto": "^0.8.8",
+    "tedious": "^16.6.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
+    "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "nodemon": "^2.0.16",
-    "prettier": "^2.6.2"
+    "prettier": "^3.1.0"
   }
 }
