--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http-status": "^1.7.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.5",
